Fixed banner loading and products icons align

--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,36 @@ img {
   height: 100%;
   padding: 0 20px;
 }
+/* ~~~~~~~~~~~~~~~Testing~~~~~~~~~~~~ */
 
-.hero .content h1 {
+.placeholder {
+  background-color: #f6f6f6;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
+}
+
+.placeholder img {
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: opacity 1s linear;
+}
+
+.placeholder img.loaded {
+  opacity: 1;
+}
+
+.img-small {
+  filter: blur(50px);
+  /* this is needed so Safari keeps sharp edges */
+  transform: scale(1);
+}
+
+~~~~~~~~~~~~~~~Testing~~~~~~~~~~~~*/ .hero .content h1 {
   font-size: 33px;
   font-weight: 300;
 }
@@ -112,7 +140,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.4);
 }
 
 .hero * {
